[gd_scene load_steps=15 format=2]

[ext_resource path="res://Player/Flying_Ball.gd" type="Script" id=1]
[ext_resource path="res://Assests/Sprites/ball_explode.png" type="Texture" id=2]
[ext_resource path="res://Assests/Sprites/Particle_circle.png" type="Texture" id=3]

[sub_resource type="Curve" id=10]
max_value = 1.2
_data = [ Vector2( 0, 0.565118 ), 0.0, 0.0, 0, 0, Vector2( 0.583732, 0.946936 ), 0.0, 0.0, 0, 0, Vector2( 1, 1.2 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=11]
offsets = PoolRealArray( 0, 0.736559, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": false,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "loop",
"speed": 12.0
} ]

[sub_resource type="Animation" id=8]
resource_name = "flying"
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "default", "loop" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="CircleShape2D" id=9]
radius = 7.0

[node name="Flying_Ball" type="RigidBody2D"]
contacts_reported = 1
contact_monitor = true
script = ExtResource( 1 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
modulate = Color( 1, 1, 1, 0.0862745 )
amount = 20
lifetime = 0.8
local_coords = false
texture = ExtResource( 3 )
direction = Vector2( 0, 10 )
spread = 100.0
gravity = Vector2( 0, 0 )
initial_velocity = 20.0
scale_amount_random = 1.0
scale_amount_curve = SubResource( 10 )
color_ramp = SubResource( 11 )

[node name="randTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/flying = SubResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 9 )

[connection signal="body_entered" from="." to="." method="_on_Flying_Ball_body_entered"]
[connection signal="timeout" from="randTimer" to="." method="_on_randTimer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
